--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   sendbird_chat_sdk: ^4.2.2
   flutter_dotenv: ^5.1.0
   flutter_bloc: ^8.1.4
+  fluttertoast: ^8.2.4
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
