--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   fluttertoast: ^8.2.4
   flutter_screenutil: ^5.9.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
