--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.2.4
   flutter_screenutil: ^5.9.0
   shared_preferences: ^2.2.2
+  go_router: ^13.2.0
 
 dev_dependencies:
   flutter_test:
