--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   shared_preferences: ^2.2.2
   go_router: ^13.2.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
