--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.2.2
   go_router: ^13.2.0
   provider: ^6.1.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
