--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   go_router: ^13.2.0
   provider: ^6.1.1
   intl: ^0.19.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
